# Fun-Kube

./: .env.example  .gitignore  PROJECT.md  README.md  bootstrap-setup.sh  fun-kube  pyproject.toml
ansible/: ansible.cfg
ansible/playbooks/: bootstrap-kubeconfig.yml  bootstrap.yml  calico.yml  cert-manager.yml  cert-renewal.yml  control-plane-join.yml  dn-essence.yml  ingress.yml  keepalived.yml  kubeadm-init.yml  local-path-provisioner.yml  longhorn.yml  metallb.yml  metrics-server.yml  untaint-cp.yml  untaint-single-node.yml  worker-join.yml
ansible/roles/calico/defaults/: main.yml
ansible/roles/calico/tasks/: main.yml
ansible/roles/cert-manager/defaults/: main.yml
ansible/roles/cert-manager/tasks/: main.yml
ansible/roles/cert-renewal/handlers/: main.yml
ansible/roles/cert-renewal/tasks/: main.yml
ansible/roles/cert-renewal/templates/: k8s-cert-renew.service.j2  k8s-cert-renew.sh.j2  k8s-cert-renew.timer.j2
ansible/roles/common/defaults/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/containerd/defaults/: main.yml
ansible/roles/containerd/handlers/: main.yml
ansible/roles/containerd/tasks/: main.yml
ansible/roles/dn-essence/defaults/: main.yml
ansible/roles/dn-essence/tasks/: main.yml
ansible/roles/dn-essence/templates/: values.yaml.j2
ansible/roles/keepalived/defaults/: main.yml
ansible/roles/keepalived/handlers/: main.yml
ansible/roles/keepalived/tasks/: main.yml
ansible/roles/keepalived/templates/: keepalived.conf.j2
fun_kube/: cli.py  config.py  deps.py  preflight.py  runner.py
(+20 files in other folders)
