[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fun-kube"
version = "0.1.0"
description = "Kubernetes cluster provisioning tool"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.scripts]
fun-kube = "fun_kube.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fun_kube*"]
